--- a/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - History Logs.html
@@ -352,6 +352,18 @@
                     text: 'Generate PDF ',
                     title: 'System Validation Logs | ' + '{{ user.first_name }} {{ user.last_name }} | ' + '{{current_date}}',
                     customize: function(doc){
+                        doc.styles.tableHeader = {
+                            bold: true,
+                            fontSize: 10,
+                            alignment: 'center'
+                        }
+
+                        var objLayout = {};
+                            objLayout['hLineWidth'] = function(i) { return .8; };
+                            objLayout['vLineWidth'] = function(i) { return .5; };
+                            objLayout['hLineColor'] = function(i) { return '#000000'; };
+                            objLayout['vLineColor'] = function(i) { return '#000000'; };
+                        doc.content[1].layout = objLayout;
 
                         var tableLength = doc.content[1].table.body.length;
                         for (var i = 0; i < tableLength; i++){
@@ -365,9 +377,11 @@
                                 }
                             } catch(ee) { }
                         };
-                        doc.defaultStyle.fontSize = 12; //2, 3, 4,etc
-                        doc.styles.tableHeader.fontSize = 12; //2, 3, 4, etc
+                        doc.defaultStyle.fontSize = 10; //2, 3, 4,etc
+                        doc.styles.tableHeader.fontSize = 10; //2, 3, 4, etc
                         doc.styles.tableHeader.alignment = 'center';
+                        doc.styles.tableHeader.fillColor = '#eef9eb';
+
                         doc.content[1].alignment = 'center';
                         doc.content[1].table.widths = [ '10%', '20%',  '20%', '25%',  '25%',];
                     }
